# NextStudio

./: .gitignore  .gitmodules  README.md  build.sh
App/: CMakeLists.txt
App/Source/: MainComponent.cpp
App/Source/LowerRange/: LowerRangeComponent.cpp  LowerRangeComponent.h
App/Source/LowerRange/PianoRoll/: PianoRollEditor.cpp  PianoRollEditor.h  VelocityEditor.cpp
App/Source/LowerRange/PluginChain/: ModifierViewComponent.cpp  PluginChainItemView.cpp  PluginChainItemView.h  PluginChainView.cpp  PluginChainView.h  PluginPresetInterface.h  PresetHelpers.cpp  PresetManagerComponent.cpp  PresetManagerComponent.h  TrackPresetAdapter.h
App/Source/Plugins/: PluginComponent.h
App/Source/Plugins/SimpleSynth/: SimpleSynthPlugin.cpp  SimpleSynthPlugin.h
App/Source/Plugins/SoundFont/: SoundFontPlugin.cpp  SoundFontPlugin.h  SoundFontPluginComponent.cpp  SoundFontPluginComponent.h
App/Source/Services/: MidiImportService.cpp  MidiImportService.h
App/Source/SideBrowser/: InstrumentEffectChooser.cpp  InstrumentEffectChooser.h  PluginBrowser.cpp  PluginBrowser.h
App/Source/SongEditor/: EditComponent.cpp  EditComponent.h  SongEditorView.cpp  TrackHeadComponent.cpp  TrackHeadComponent.h  TrackLaneComponent.cpp  TrackLaneComponent.h  TrackListView.cpp
App/Source/UI/: HeaderComponent.cpp  HeaderComponent.h  ModifierSidebar.cpp  PluginMenu.cpp  PluginScanner.cpp  PluginScanner.h  SetupWizard.cpp  SetupWizard.h
App/Source/UI/Controls/: AutomatableComboBox.cpp  AutomatableComboBox.h  AutomatableMidiLearnSupport.cpp  AutomatableMidiLearnSupport.h  AutomatableParameter.cpp  AutomatableParameter.h  AutomatableSlider.cpp  AutomatableSlider.h  AutomatableToggle.cpp  AutomatableToggle.h
App/Source/Utilities/: ApplicationViewState.h  AutomationWriteGuard.h  DragState.h  EditViewState.cpp  EditViewState.h  ExtendedUIBehavior.h  Utilities.cpp  Utilities.h
App/resources/: CMakeLists.txt
